plugins {
    id 'eclipse'
    id 'idea'
    id 'com.modrinth.minotaur' version '2.+'
	id 'net.neoforged.gradle.userdev' version '7.0.+'
}

repositories {
    maven { url = 'https://maven.fabricmc.net' }
}

group= "team.creative" + project.mod_id

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

java.sourceSets {
    main {
        java {
            srcDirs = ["src/main/java", "src/forge/java"]
        }
        resources {
            srcDirs = ["src/main/resources", "src/forge/resources"]
        }
        runs {
            modIdentifier = project.mod_id
        }
    }
}

runs {	
	configureEach {
		workingDirectory project.file('run')
        systemProperty 'forge.logging.console.level', 'debug'
		
		modSource project.sourceSets.main
	}
    
	client {
	}

	server {
	}
}

dependencies {
    implementation "net.neoforged:neoforge:${forge_version}"
    
    compileOnly "net.fabricmc:fabric-loader:${fabric_version}"
}

modProperties = [ '    displayTest="NONE"' ]
modDependencies = []
modMixins = [ "creativecore.mixins.json", "creativecore.forge.mixins.json" ]
